# langmanus4BIA

./: CONTRIBUTING.md  LICENSE  README.md  README_ja.md  README_zh.md  docker-compose.yml  pyproject.toml  server.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: FAQ.md  FAQ_zh.md
src/: database.py
src/agents/: __init__.py  agents.py
src/api/: __init__.py  app.py
src/config/: __init__.py  config.py
src/entity/: entity.py
src/graph/: builder.py  nodes.py  types.py
src/prompts/: coordinator.md
src/schema/: schemas.py
src/service/: workflow_service.py
src/tools/: bash_tool.py  browser.py
src/utils/: file_utils.py  path_utils.py
